force-app/main/default/objects/CorpDev_Opportunity__c/CorpDev_Opportunity__c.object-meta.xml
<CustomObject>
    <label>CorpDev Opportunity</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CorpDev Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>