force-app/main/default/objects/CorpDev_Opportunity__c/fields/Comments_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Comments_Next_Steps__c</fullName>
    <label>Process Comments/Next Steps</label>
    <type>TextArea</type>
</CustomField>