force-app/main/default/objects/CorpDev_Opportunity__c/fields/CorpDev_Account__c.field-meta.xml
<CustomField>
    <fullName>CorpDev_Account__c</fullName>
    <label>CorpDev Account</label>
    <referenceTo>CorpDev_Account__c</referenceTo>
    <relationshipLabel>CorpDev Opportunities</relationshipLabel>
    <relationshipName>CorpDev_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>