force-app/main/default/objects/CorpDev_Opportunity__c/fields/Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage__c</fullName>
    <label>Deal Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
                <default>true</default>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Killed</fullName>
            </value>
            <value>
                <fullName>Hold/Watch</fullName>
            </value>
            <value>
                <fullName>Exploring</fullName>
            </value>
            <value>
                <fullName>Pre_LOI</fullName>
                <label>Pre-LOI</label>
            </value>
            <value>
                <fullName>LOI</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>