force-app/main/default/objects/CorpDev_Opportunity__c/fields/Internal_Source__c.field-meta.xml
<CustomField>
    <fullName>Internal_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Source</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CorpDev_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>