force-app/main/default/objects/CorpDev_Opportunity__c/fields/Internal_Theme__c.field-meta.xml
<CustomField>
    <fullName>Internal_Theme__c</fullName>
    <label>Internal Theme(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patient Communication</fullName>
            </value>
            <value>
                <fullName>Online Presence</fullName>
            </value>
            <value>
                <fullName>Care Management</fullName>
            </value>
            <value>
                <fullName>Reminders</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Insights</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>AI &amp; Machine Learning</fullName>
            </value>
            <value>
                <fullName>Patient Education</fullName>
            </value>
            <value>
                <fullName>Intra-Office Messaging</fullName>
                <label>Intra-Office</label>
            </value>
            <value>
                <fullName>Virtual Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>