force-app/main/default/objects/CorpDev_Opportunity__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identified, Not Contacted</fullName>
                <default>true</default>
                <label>Identified, Not Contacted</label>
            </value>
            <value>
                <fullName>Contacted, No Reply</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Not Interesting</fullName>
            </value>
            <value>
                <fullName>Stay Close, Follow-Up Scheduled</fullName>
            </value>
            <value>
                <fullName>CorpDev Pipeline</fullName>
            </value>
            <value>
                <fullName>Partner Pipeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>