force-app/main/default/objects/CorpDev_Opportunity__c/fields/Product_Engineering_Notes__c.field-meta.xml
<CustomField>
    <fullName>Product_Engineering_Notes__c</fullName>
    <label>Product/Engineering Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>