force-app/main/default/objects/CorpDev_Opportunity__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Internal/Proprietary</fullName>
            </value>
            <value>
                <fullName>Other Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>