force-app/main/default/objects/CorpDev_Opportunity__c/fields/Source_Firm__c.field-meta.xml
<CustomField>
    <fullName>Source_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Firm</label>
    <referenceTo>CorpDev_Account__c</referenceTo>
    <relationshipLabel>CorpDev Opportunities (Source Firm)</relationshipLabel>
    <relationshipName>CorpDev_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>