force-app/main/default/objects/CorpDev_Opportunity__c/fields/Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Name</label>
    <referenceTo>CorpDev_Contact__c</referenceTo>
    <relationshipLabel>CorpDev Opportunities</relationshipLabel>
    <relationshipName>CorpDev_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>