force-app/main/default/objects/CorpDev_Opportunity__c/fields/Source_Notes__c.field-meta.xml
<CustomField>
    <fullName>Source_Notes__c</fullName>
    <label>Source Notes</label>
    <type>TextArea</type>
</CustomField>