force-app/main/default/objects/CorpDev_Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal_Stage__c</columns>
    <columns>Lead_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>